--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" menuId="first" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>منوی اصلی</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle *ngIf="user === null">
+          <ion-item [routerLink]="['/account','login']">
+            <ion-label>ورود</ion-label>
+            <ion-icon name="log-in-outline" slot="start"></ion-icon>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle *ngIf="user === null">
+          <ion-item [routerLink]="['/account','register']">
+            <ion-label>ثبت نام</ion-label>
+            <ion-icon name="person-add-outline" slot="start"></ion-icon>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle *ngIf="user !== null">
+          <ion-item (click)="logOutUser()">
+            <ion-label>خروج</ion-label>
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
