--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="main">
+        <ion-icon name="home-outline"></ion-icon>
+        <ion-label>خانه</ion-label>
+      </ion-tab-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-tab-button tab="products">
+        <ion-icon name="grid-outline"></ion-icon>
+        <ion-label>محصولات</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="order">
+        <ion-icon name="basket-outline"></ion-icon>
+        <ion-label>سبد خرید</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="user-info">
+        <ion-icon name="person-circle-outline"></ion-icon>
+        <ion-label>اطلاعات من</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="about-us">
+        <ion-icon name="information-circle"></ion-icon>
+        <ion-label>درباره ما</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
